# CommonDoesThings

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  ver
commondoesthings/: __init__.py
commondoesthings/src/: _compiler_based.c  c_bytes.c  c_con_time.c  c_docs.c  c_file_io.c  c_hashes.c  c_random.c  c_rm.c  c_run.c  module.c
